# otpilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  vercel.json
docs/: CHANGELOG.md  CONTRIBUTING.md  PRIVACY.md  README.md  SETUP.md  TERMS.md  USER_FLOW.md
otpilot/: __init__.py  clipboard.py  config.py  credentials.py  gmail_client.py  history.py  hotkey_listener.py  logger.py  main.py  notifier.py  otp_extractor.py  setup_wizard.py  token_store.py  tray.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
web/api/: .env.example  package.json  requirements.txt  stats.js  stats.ts  store.ts  tsconfig.json
web/api/auth/: callback.js  callback.ts  session.js  start.js  start.ts  store.js  token.ts
web/api/lib/: supabase.js
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AboutDeveloper.tsx  CustomCursor.tsx  FeaturesGrid.tsx  Footer.tsx  Hero.tsx  HeroDemoPanel.tsx  HowItWorks.tsx  InstallStrip.tsx  LegalLayout.tsx  LogoMark.tsx  MagicMomentDemo.tsx  Markdown.tsx  TerminalWindow.tsx
web/src/lib/: firebase.ts
web/src/pages/: Auth.tsx  Index.tsx  Installation.tsx  Privacy.tsx  Terms.tsx
