[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otpilot"
dynamic = ["version"]
description = "Background CLI utility that copies OTPs from Gmail to clipboard on hotkey trigger"
readme = "docs/README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Jenil", email = "mail2jenil.pokar19@gmail.com"},
]
keywords = ["otp", "gmail", "clipboard", "hotkey", "automation", "2fa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Email",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.31.0",
    "packaging>=23.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.2.0",
    "pynput>=1.7.6",
    "pystray>=0.19.5",
    "Pillow>=10.0.0",
    "pyperclip>=1.8.2",
    "plyer>=2.1.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/CodeWithJenil/otpilot"
Documentation = "https://github.com/CodeWithJenil/otpilot/tree/main/docs"
Repository = "https://github.com/CodeWithJenil/otpilot"
Issues = "https://github.com/CodeWithJenil/otpilot/issues"

[project.scripts]
otpilot = "otpilot.main:main"

[tool.setuptools.dynamic]
version = {attr = "otpilot.__version__"}

[tool.setuptools.packages.find]
include = ["otpilot*"]
